# fast-api-async-task-boilerplate

./: .env  .pre-commit-config.yaml  README.md  pyproject.toml
app/: models.py  settings.py
app/api/: main.py  security.py
app/api/routers/: auth.py  jobs.py  public.py  users.py
app/api/schemas/: __init__.py  job.py  jobs.py  token.py  user.py
app/jobs/: queue.py  sample_job.py
app/tasks/: queue.py
scripts/: create_user.py
