[tool.poetry]
name = "fast-api-async-task-boilerplate"
version = "0.1.0"
description = "FastAPI boilerplate with support for triggering / tracking / getting results of async tasks"
authors = ["Elias Posen <elias@posen.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
SQLAlchemy = "^1.4.36"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
pre-commit = "^2.18.1"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
